# webui-dev--rust-webui

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/demo/: Cargo.toml
crates/webui/: Cargo.toml
crates/webui-sys/: Cargo.toml  build.rs  webui-2.syms
crates/webui-sys/examples/: hello_world.rs  hello_world_sys.rs
crates/webui-sys/src/: bindgen.rs  lib.rs
crates/webui/examples/: call_js_from_rust.rs  call_rust_from_js.rs  direct_bindings.rs  hello_world.rs  serve_a_file.rs  set_size.rs  try_browser.rs  try_chrome.rs  try_edge.rs  try_opera.rs
crates/webui/src/: lib.rs
