[workspace]
name = "webui-rs"
resolver = "1"
package.version = "0.1.0"
edition = "2021"
members = [
    "crates/webui-sys",
    "crates/webui",
]

[workspace.dependencies]
# webui-sys = { path = "crates/webui-sys" }
webui-sys = { path = "crates/webui-sys", default-features = false }

# [[example]]
# name = "call_js_from_rust"
# path = "examples/call_js_from_rust.rs"

# [[example]]
# name = "call_rust_from_js"
# path = "examples/call_rust_from_js.rs"

# [[example]]
# name = "direct_binding"
# path = "examples/direct_binding.rs"

# [[example]]
# name = "hello_world"
# path = "examples/hello_world.rs"

# [[example]]
# name = "serve_a_file"
# path = "examples/serve_a_file.rs"

# [[example]]
# name = "mmtx-ctrl"
# path = "examples/mmtx-ctrl.rs"
