[package]
name = "webui-sys"
version = "2.4.2"
edition = "2021"
description = "Rust bindings for webui"
build = "build.rs"
homepage = "https://github.com/webui-dev/webui"

[dependencies]
lazy_static = "1.5"

[build-dependencies]
bindgen = "0.70"
lazy_static = "1.5"
reqwest = { version="0.12", features=["blocking"] }
zip = "2"

[features]
#default = []
default = ["runtime", "buildtime-bindgen"]
#default = ["runtime"]
#default = ["buildtime-bindgen"]
buildtime-bindgen = [] # generate bindings at build time
cplusplus = ["dylib","runtime"]
runtime = [] # use shared library
dylib = []
clang = []
src = []
docs-rs = []

[package.metadata.docs.rs]
features = ["docs-rs"]

[build]
rustflags = ["-C", "target-feature=+crt-static"]
