[package]
name = "webui"
version.workspace = true
edition = "2021"
description = "Web UI for Rust"

[dependencies]
webui-sys = { path = "../webui-sys", default-features = false}
# mediamtx-sys = { path = "../mediamtx-sys" }

[features]
default = ["msvc"]
clang = ["webui-sys/clang"]
gcc = ["webui-sys/gcc"]
msvc = ["webui-sys/msvc"]
src = ["webui-sys/src"]
runtime = ["webui-sys/runtime"] # use shared library
dylib = ["webui-sys/dylib"] # maybe useful for wasm
cplusplus = ["webui-sys/cplusplus"]
docs-rs = ["webui-sys/docs-rs"]
