[package]
name = "webui"
version.workspace = true
edition = "2021"
description = "Web UI for Rust"

[dependencies]
webui-sys = { workspace = true, features = ["msvc"] }
# mediamtx-sys = { path = "../mediamtx-sys" }

[features]
default = ["msvc"]
clang = ["webui-sys/clang"]
gcc = ["webui-sys/gcc"]
msvc = ["webui-sys/msvc"]
src = ["webui-sys/src"]
